# NYC-Urban-Operations-Intelligence-Platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  README_zh.md  pyproject.toml
.claude/: MEMORY.md  directory-structure.md  feedback.md  project.md  user.md
.claude/rules/: backfill.md
config/sources/: README.md  dcp.yaml  nyc_311.yaml  nypd.yaml  open_meteo.yaml
contracts/api-contracts/: open-meteo.yaml
dags/: _dag_common.py  _spark_common.py  dag_audit_bronze.py  dag_backfill_dcp.py  dag_backfill_nyc_311.py  dag_backfill_nypd.py  dag_backfill_open_meteo.py  dag_backfill_silver_dcp.py  dag_backfill_silver_open_meteo.py  dag_ingest_dcp.py  dag_ingest_nyc_311.py  dag_ingest_nypd.py  dag_ingest_open_meteo.py  dag_silver_open_meteo.py  dag_weather_producer_control.py  dag_weather_stream_to_snowflake.py  hello_airflow.py  hello_airflow_empty_operator.py  hello_airflow_python.py  weather_etl_to_snowflake.py
data/: weather_raw.csv
docs/: readme.md
docs/00-requirements/: Project-Requirement-Overview.md  business-objectives.html  business-objectives.md
docs/01-architecture/: Project-Overview.md  Project-Structure-Overview.md  nyc-uoip-repo-structure.html
docs/02-datasources/: source-registery.md
docs/03-datasources/: backfill-comands.md  source-registery.md
docs/09-ProjectManagement/: plan_phase1_12weeks_nyc-uoip-plan.html  project-management.md
docs/09-progress/: week1_nyc_uoip_progress.html
infra/terraform/: main.tf  (+7 more)
reports/: bronze_quality_report.md  src_nyc_311_profile.json
scripts/: weather_producer.py
tests/: ReadMe.md
(+69 files in other folders)
