[project]
name = "nyc-uoip"
version = "0.1.0"
description = "NYC Urban Operations Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "google-cloud-storage>=2.18.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "sqlfluff>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "apache-airflow-stubs",
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "scripts"]
